--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -1,7 +1,28 @@
 ﻿@model Portfolio.Models.HomeViewModel
-<ul>
+
+
+<div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+</div>
+
+<div class="card-deck">
     @foreach (var project in Model.Projects)
     {
-        <li>@project.Title</li>
+        <div class="card">
+            <img class="card-img-top" src="@project.ImageThumbnailUrl" alt="Project Thumbnail">
+            <div class="card-body">
+                <h5 class="card-title">@project.Title</h5>
+                <p class="card-text">@project.ShortDescription</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">
+                    <a href="@project.GithubUrl">Github Link</a>
+                </small>
+            </div>
+        </div>
     }
-</ul>
+</div>
