--- a/Portfolio/Views/Project/Edit.cshtml
+++ b/Portfolio/Views/Project/Edit.cshtml
@@ -1,37 +1,33 @@
 ﻿@model Project
 
-@{
-    ViewData["Title"] = "Create";
-}
-
-<form asp-action="Create" >
+<form asp-action="Edit" asp-route-id="@Model.Id">
     <div class="form-group">
         <label asp-for="Title">Project Title</label>
-        <input asp-for="Title" type="text" class="form-control">
+        <input asp-for="Title" type="text" class="form-control" value="@Model.Title">
         <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="GithubUrl" class="control-label"></label>
-        <input asp-for="GithubUrl" class="form-control" />
+        <input asp-for="GithubUrl" class="form-control" value="@Model.GithubUrl"/>
         <span asp-validation-for="GithubUrl" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="ImageUrl" class="control-label"></label>
-        <input asp-for="ImageUrl" class="form-control" />
+        <input asp-for="ImageUrl" class="form-control" value="@Model.ImageUrl"/>
         <span asp-validation-for="ImageUrl" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="ShortDescription" class="control-label"></label>
-        <textarea rows="2" asp-for="ShortDescription" class="form-control"></textarea>
+        <textarea rows="2" asp-for="ShortDescription" class="form-control">@Model.ShortDescription</textarea>
         <span asp-validation-for="ShortDescription" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="LongDescription" class="control-label"></label>
-        <textarea rows="5" asp-for="LongDescription" class="form-control"></textarea>
+        <textarea rows="5" asp-for="LongDescription" class="form-control">@Model.LongDescription</textarea>
         <span asp-validation-for="LongDescription" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Confirm changes</button>
+    <button class="btn btn-primary">Drop changes</button>
 </form>
-
 
