--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -29,16 +29,16 @@
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-                <a asp-area="" asp-controller="Project" asp-action="Index" class="nav-link">Project</a>
+                <a asp-area="" asp-controller="Project" asp-action="Index" asp-route-id="Create" class="nav-link">Project</a>
             </li>
             <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Index</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Blog</a>
             </li>
             <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Index</a>
+                <a asp-area="" asp-controller="Project" asp-action="All" class="nav-link">Projects</a>
             </li>
         </ul>
-        @* <partial name="_LoginPartial" /> *@
+        <partial name="_LoginPartial" />
     </div>
 </nav>
 
@@ -48,7 +48,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Portfolio</p>
+            <p>&copy; 2018 - kklosowski.com</p>
         </footer>
     </div>
 
