Blog post list added and card responsiveness fixed

--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -1,1 +1,26 @@
-﻿@model object
+﻿@using System.Globalization
+@model List<Post>
+
+<div class="container">
+    @foreach (var post in Model)
+    {
+        <div class="col-12 clearfix">
+            <div class="col-md-4 col-lg-4 mr-auto float-left">
+                <img class="img-responsive" src="@post.ImageUrl"/>
+            </div>
+            <div class="col-md-8 col-lg-8 ml-auto">
+                <h1>@post.Title</h1>
+                <p>@post.ShortText</p>
+                <div>
+                    <span class="badge badge-light badge-secondary">Posted @post.DateCreated.ToString(CultureInfo.CurrentCulture)</span>
+                    <span class="label ml-auto float-right">Author: @post.CreatorId</span>
+                    @* <div class="pull-right"> *@
+                    @*     <span class="label label-default">alice</span> <span class="label label-primary">story</span> <span class="label label-success">blog</span> <span class="label label-info">personal</span> <span class="label label-warning">Warning</span> *@
+                    @*     <span class="label label-danger">Danger</span> *@
+                    @* </div> *@
+                </div>
+            </div>
+        </div>
+        <hr>
+    }
+</div>
