Post adding and dynamic display added, database relationships working

--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -6,7 +6,7 @@
     {
         <div class="col-12 clearfix">
             <div class="col-md-4 col-lg-4 mr-auto float-left">
-                <img class="img-responsive" src="@post.ImageUrl"/>
+                <img class="img-responsive" src="@post.ImageUrl" style="max-width: 300px"/>
             </div>
             <div class="col-md-8 col-lg-8 ml-auto">
                 <h1>@post.Title</h1>
