--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -4,12 +4,13 @@
 <div class="container">
     @foreach (var post in Model)
     {
+//        TODO: Fix scaling
         <div class="col-12 clearfix">
-            <div class="col-md-4 col-lg-4 mr-auto float-left">
+            <div class="col-md-4 col-lg-4 col-sm-4 col-xs-12 mr-auto float-left">
                 <img class="img-responsive" src="@post.ImageUrl" style="max-width: 300px"/>
             </div>
-            <div class="col-md-8 col-lg-8 ml-auto">
-                <h1>@post.Title</h1>
+            <div class="col-md-7 col-lg-8 col-sm-8 col-xs-12 ml-auto" style="height: 100%">
+                <h1><a asp-action="Post" asp-controller="Blog" asp-route-id="@post.Id">@post.Title</a></h1>
                 <p>@post.ShortText</p>
                 <div>
                     <span class="badge badge-light badge-secondary">Posted @post.DateCreated.ToString(CultureInfo.CurrentCulture)</span>
