--- a/Portfolio/Views/Blog/Post.cshtml
+++ b/Portfolio/Views/Blog/Post.cshtml
@@ -1,12 +1,56 @@
-﻿@model Post
+﻿@using System.Globalization
+@model Post
 
 @{
     ViewBag.Title = "title";
 }
+<div class="container container-fluid  ">
+    <div class="col-md-12 mr-auto">
+        <div class="row">
+            <div class="col-md">
+                <h1 class="card-title">@Model.Title</h1>
+                <p class="lead">@Model.ShortText</p>
+            </div>
+            <div class="col-md">
+                <img class="img-fluid" src="@Model.ImageUrl" alt="Project Thumbnail">
+            </div>
+        </div>
+        <div class="row">
+            <p>@Model.LongText</p>
+        </div>
+        <span class="badge badge-dark">@Model.DateCreated.ToString(CultureInfo.InvariantCulture)</span>
+        <hr />
+    </div>
+</div>
 
-@Model.Title
-@Model.Author.UserName
-@Model.DateCreated
-@Model.ShortText
 
+<div class="container-fluid">
+    <div class="col-xl-6 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+        <br style="clear: both">
+        <div class="form-group">
+            <label id="messageLabel" for="message">
+                <b>Comment</b>
+            </label>
+            <textarea class="form-control input-lg " type="textarea" id="message" placeholder="Message" maxlength="140" rows="4"></textarea>
+            <span class="help-block">
+                <p id="characterLeft" class="help-block ">You have reached the limit</p>
+            </span>
+        </div>
+        <br style="clear: both">
+        <div class="form-group col-md-6 ml-auto">
+            <button class="form-control input-sm btn btn-success disabled" id="btnSubmit" name="btnSubmit" type="button" style="height: 35px"> Send</button>
+        </div>
+        <hr />
+    </div>
 
+</div>
+
+<div class="col-xl-6 col-lg-8 col-md-8 col-sm-12 col-xs-12">
+    <img class="mr-3" style="max-width: 40px" src="https://cdn-images-1.medium.com/max/1200/1*MccriYX-ciBniUzRKAUsAw.png" alt="Generic placeholder image">
+    <div class="media-body">
+        <h5 class="mt-0">Media heading</h5>
+        <p>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        </p>
+    </div>
+</div>
