--- a/Portfolio/wwwroot/css/site.css
+++ b/Portfolio/wwwroot/css/site.css
@@ -66,7 +66,6 @@ hr {
     }
 }
 
-
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .card, .card * {
         max-width: 20rem;
@@ -75,7 +74,12 @@ hr {
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .card, .card * {
-        max-width: 30rem;
+        max-width: 28rem;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .card, .card * {
+        max-width: 21rem;
     }
 }
 
