--- a/Portfolio/Views/Project/Index.cshtml
+++ b/Portfolio/Views/Project/Index.cshtml
@@ -4,18 +4,20 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="container">
-    <div class="row">        
-        <div class="col-md">
-            <h1 class="card-title">@Model.Title</h1>
-            <p class="lead">@Model.ShortDescription</p>
-            <a href="@Model.GithubUrl">Github</a>
+<div class="container container-fluid  ">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 mx-auto">
+        <div class="row pad-bot-1rem">
+            <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-xs-12 pad-bot-1rem">
+                <h1 class="card-title">@Model.Title</h1>
+                <p class="lead">@Model.ShortDescription</p>
+                <span><a class="badge badge-secondary" href="@Model.GithubUrl">Github</a></span>
+            </div>
+            <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12 col-xs-12 ml-auto">
+                <img class="img-fluid rounded" src="@Model.ImageUrl" alt="Project Thumbnail">
+            </div>
         </div>
-        <div class="col-md">
-            <img class="img-fluid" src="@Model.ImageUrl" alt="Project Thumbnail">
+        <div class="row post-text-row">
+            <p>@Model.LongDescription</p>
         </div>
-    </div>
-    <div class="row">
-        <p>@Model.LongDescription</p>
     </div>
 </div>
