--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/twitter-bootstrap/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link rel="stylesheet" href="~/css/test.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -18,30 +19,23 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Portfolio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Project" asp-action="Index" asp-route-id="Create" class="nav-link">Project</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Project" asp-action="All" class="nav-link">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="User" asp-action="All" class="nav-link">Users</a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link">Blog</a>
-            </li>
-        </ul>
-        <partial name="_LoginPartial" />
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Portfolio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link">Blog</a>
+                </li>
+            </ul>
+            <partial name="_LoginPartial"/>
+        </div>
     </div>
 </nav>
 
