--- a/Portfolio/Views/Shared/_LoginPartial.cshtml
+++ b/Portfolio/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,22 @@
 @using Microsoft.AspNetCore.Identity
-
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="ml-auto">
+    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new {area = ""})" method="post" id="logoutForm" class="ml-auto">
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="nav-link">Hello @UserManager.GetUserName(User)!</a>
             </li>
+            @if (User.IsInRole("Admin"))
+            {
+                <li class="nav-item">
+                    <a asp-area="" asp-controller="Admin" asp-action="Index" class="nav-link">Admin Panel</a>
+                </li>
+            }
             <li class="nav-item">
-                <button type="submit" class="btn btn-link navbar-btn nav-link">Logout</button>
+                <button type="submit" class="btn btn-link nav-link">Logout</button>
             </li>
         </ul>
     </form>
@@ -19,7 +24,11 @@
 else
 {
     <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a></li>
-        <li class="nav-item"><a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Login</a></li>
+        <li class="nav-item">
+            <a asp-area="Identity" asp-page="/Account/Register" class="nav-link">Register</a>
+        </li>
+        <li class="nav-item">
+            <a asp-area="Identity" asp-page="/Account/Login" class="nav-link">Login</a>
+        </li>
     </ul>
 }
