--- a/Portfolio/wwwroot/css/test.css
+++ b/Portfolio/wwwroot/css/test.css
@@ -1,62 +1,109 @@
 ﻿.fill {
-    min-height: 100%;
     height: 100%;
+    min-height: 100%;
 }
-.parent {
-    width: 240px;
-}
+
+.parent { width: 240px; }
+
 .img {
     display: block;
-    width: 100%;
     height: auto;
+    width: 100%;
 }
+
 .post {
     min-height: 15rem;
     padding: 15px;
 }
-.post-content {
-    position: relative;
-}
+
+.post-content { position: relative; }
+
 .date-author-footer {
-    position: absolute;
     bottom: 10px;
     left: 15px;
+    position: absolute;
 }
 
-.how-section1{
+.how-section1 {
     margin-top: -4rem;
     padding: 10%;
-
 }
 
-.how-section1 a {
-    color: #555555
-}
+.how-section1 a { color: #555555 }
 
-.how-section1 h4{
+.how-section1 h4 {
     color: #555;
-    font-weight: bold;
     font-size: 30px;
+    font-weight: bold;
 }
-.how-section1 .subheading{
+
+.how-section1 .subheading {
     color: #3931af;
     font-size: 20px;
 }
-.how-section1 .row
-{
-    /* margin-top: 10%; */
-}
 
-.how-section1 hr {
-    margin: 3rem 0;
-}
+.how-section1 .row { /* margin-top: 10%; */ }
 
-.how-img 
-{
-    text-align: center;
+.how-section1 hr { margin: 3rem 0; }
+
+.how-img {
     padding-bottom: 15px;
-}
-.how-img img{
-    width: 80%;
+    text-align: center;
 }
 
+.how-img img { width: 80%; }
+
+.fill {
+    height: 100%;
+    min-height: 100%;
+}
+
+.parent { width: 240px; }
+
+.img {
+    display: block;
+    height: auto;
+    width: 100%;
+}
+
+.post {
+    min-height: 15rem;
+    padding: 15px;
+}
+
+.post-content { position: relative; }
+
+.date-author-footer {
+    bottom: 10px;
+    left: 15px;
+    position: absolute;
+}
+
+.how-section1 {
+    margin-top: -4rem;
+    padding: 10%;
+}
+
+.how-section1 a { color: #555555 }
+
+.how-section1 h4 {
+    color: #555;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.how-section1 .subheading {
+    color: #3931af;
+    font-size: 20px;
+}
+
+.how-section1 .row { /* margin-top: 10%; */ }
+
+.how-section1 hr { margin: 3rem 0; }
+
+.how-img {
+    padding-bottom: 15px;
+    text-align: center;
+}
+
+.how-img img { width: 80%; }
