--- a/Portfolio/Views/Admin/_AdminLayout.cshtml
+++ b/Portfolio/Views/Admin/_AdminLayout.cshtml
@@ -5,13 +5,13 @@
 
 <div class="container">
     <div class="row">
-        <div class="list-group col-md-3">
+        <div class="list-group col-md-3 py-0">
             <a asp-controller="User" asp-action="All" class="list-group-item list-group-item-dark"><span>Users</span></a>
             <a asp-controller="Project" asp-action="All" class="list-group-item"><span>Projects</span></a>
             <a asp-controller="Blog" asp-action="Index" class="list-group-item"><span>Posts</span></a>
         </div>
 
-        <div class="col-md-8 ml-auto ">
+        <div class="col-md-9">
             @RenderBody()
         </div>
     </div>
