--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -5,17 +5,17 @@
     @foreach (var post in Model)
     {
         <div class="row">
-            <div class="col-md-6 how-img">
+            <div class="col-xl-6 col-lg-6 col-md-5 col-sm-12 col-xs-12 how-img">
                 <img src="@post.ImageUrl" class="rounded-circle img-fluid" alt=""/>
             </div>
-            <div class="col-md-6">
+            <div class="col-xl-6 col-lg-6 col-md-7 col-sm-12 col-xs-12">
                 <h4>
                     <a asp-action="Post" asp-controller="Blog" asp-route-id="@post.Id">@post.Title</a>
                 </h4>
                 <p class="text-muted">
                     @post.ShortText
                 </p>
-                <div>
+                <div class="d-flex">
                     <span class="badge badge-light badge-secondary mr-auto">@post.DateCreated.ToString(CultureInfo.CurrentCulture)</span>
                     <span class="badge badge-light badge-secondary ml-auto">Author: @(post.IdentityUser.Email)</span>
                 </div>
