--- a/Portfolio/Views/Project/Index.cshtml
+++ b/Portfolio/Views/Project/Index.cshtml
@@ -6,8 +6,8 @@
 
 <div class="container container-fluid  ">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-11 col-xl-11 mx-auto">
-        <div class="row pad-bot-1rem">
-            <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-xs-12 pad-bot-1rem">
+        <div class="row pb-3">
+            <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12 col-xs-12 pb-3">
                 <h1 class="card-title">@Model.Title</h1>
                 <p class="lead">@Model.ShortDescription</p>
                 <span><a class="badge badge-secondary" href="@Model.GithubUrl">Github</a></span>
