--- a/Portfolio/Views/Blog/Index.cshtml
+++ b/Portfolio/Views/Blog/Index.cshtml
@@ -15,9 +15,17 @@
                 <p class="text-muted">
                     @post.ShortText
                 </p>
-                <div class="d-flex">
-                    <span class="badge badge-light badge-secondary mr-auto">@post.DateCreated.ToString(CultureInfo.CurrentCulture)</span>
-                    <span class="badge badge-light badge-secondary ml-auto">Author: @(post.IdentityUser.Email)</span>
+                <div class="row">
+                    <div class="col">
+                        <span class="badge badge-light badge-secondary mr-auto">
+                            @post.DateCreated.ToString(CultureInfo.CurrentCulture)
+                        </span>
+                    </div>
+                    <div class="col">
+                        <span class="badge badge-light badge-secondary ml-auto">
+                            Author: @(post.IdentityUser.Email)
+                        </span>
+                    </div>                                           
                 </div>
             </div>
         </div>
