--- a/Portfolio/Views/Home/Index.cshtml
+++ b/Portfolio/Views/Home/Index.cshtml
@@ -2,15 +2,17 @@
 
 
 <div class="full-width main-jumbotron">
-    <div class="jumbotron">
-        <div class="container text-light text-center py-5">
-            <h1 class="display-3">
-                <strong>Kamil Klosowski</strong>
-            </h1>
-            <p class="lead">Student, Web developer, aspiring Data Scientist.</p>
-            <hr class="my-4">
-            <p></p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="w-100 h-100 p-0 m-0 lead-back-shadow-gradient full-width">
+        <div class="jumbotron">
+            <div class="container lead-shadow-gradient text-light text-center py-5">
+                <h1 class="display-3">
+                    <strong>Kamil Klosowski</strong>
+                </h1>
+                <p class="lead">Student, Web developer, aspiring Data Scientist.</p>
+                <hr class="my-4">
+                <p></p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
         </div>
     </div>
 </div>
