--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -18,25 +18,26 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-0">
-    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Portfolio</a>
+<nav class="navbar navbar-expand-md navbar-dark mb-0 fixed-top" id="mainNav">
+    <div class="transition-helper"></div>
+    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand js-scroll-trigger">Portfolio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="nav navbar-nav">
             <li class="nav-item">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link js-scroll-trigger">Home</a>
             </li>
             <li class="nav-item">
-                <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link">Blog</a>
+                <a asp-area="" asp-controller="Blog" asp-action="Index" class="nav-link js-scroll-trigger">Blog</a>
             </li>
         </ul>
         <partial name="_LoginPartial"/>
     </div>
 </nav>
 
-<partial name="_CookieConsentPartial"/>
+@* <partial name="_CookieConsentPartial"/> *@
 
 <div class="container body-content">
     @RenderBody()
@@ -50,6 +51,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/navbar-shrinker.js"></script>
 </environment>
 <environment exclude="Development, Production">
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
@@ -58,6 +60,7 @@
             crossorigin="anonymous"
             integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/4.1.1/bootstrap.min.js"
             asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
@@ -65,6 +68,8 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
     </script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
+    <script src="~/js/navbar-shrinker.js" asp-append-version="true"></script>
+
 </environment>
 
 @RenderSection("Scripts", false)
